Public messaging implemented as a step toward private messaging.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@71 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -6,13 +6,16 @@ Better refresh algorithm for the ContactsView (try to only update the changed el
 
 Persistence
 
-Contact Info and Profile GUI
-
 Milestone: Sneer is Usable -------------------------
+
+Contact Info and Profile
 
 Fotographs  :)
 
+Milestone: Sneer is Presentable -------------------------
+
 Messages
+  - Make messaging private
 
 Trust Metric
 
