--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -14,7 +14,11 @@ Notifications
 	Level 1 contact "WhatsHisNickname" is online
 	Level 2 contact "WhatsHisNickname>Nickname" is now sovereign
 
+Server Port - Allow change. MUST WORK WITHOUT RESTART.  ;)
+
 Milestone: Sneer is Presentable -------------------------
+
+Snapshots - prevayler.takeSnapshot()
 
 Messages
   - Make messaging private
