--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -8,7 +8,7 @@ Milestone: Sneer is Usable -------------------------
 
 Contact Info and Profile
 
-Fotographs  :)
+Large photographs
 
 Notifications
 	Level 1 contact "WhatsHisNickname" is online
