Contact online notifications.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@88 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -6,9 +6,7 @@ Contact Info and Profile
 
 Large photographs
 
-Notifications
-	Level 1 contact "WhatsHisNickname" is online
-	Level 2 contact "WhatsHisNickname>Nickname" is now sovereign
+Notifications -	Level 2 contact "WhatsHisNickname>Nickname" is now sovereign
 
 Server Port - Allow change. MUST WORK WITHOUT RESTART.  ;)
 
@@ -28,6 +26,8 @@ Top Ten plugin
   - File Rating for ED2K links (Sharereactor-like)
 
 Trust Metric
+
+Consider XML-RPC
 
 Disk sharing
   - Simple file replication
