XStream (XML serialization) used on the wire for future interoperability with the LifeLets peer (C#).
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@91 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -2,12 +2,14 @@
 
 TODO:
 
-Refactor: Move Contact to Sneer (facade). Make GUI truly only a skin.
+XML - XStream serialization on the wire
 
 Profile
   - Profile Info
   - Contact Info
-  - Large photographs
+  - Large photograph
+
+Refactor: Move Contact to Sneer (facade). Make GUI truly only a skin.
 
 Notifications -	Level 2 contact "WhatsHisNickname>Nickname" is now sovereign
 
@@ -29,6 +31,9 @@ Top Ten plugin
   - File Rating for ED2K links (Sharereactor-like)
 
 Trust Metric
+
+Photograph sharing.
+
 
 Consider XML-RPC
 
