Refactoring - GuiContacts (model for the TreeView) are no longer being recreated at every refresh.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@117 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -1,11 +1,18 @@
 [Sneer is not test-driven. It is GUI-driven and test-verified.]
 
-TODO:
+============ FIX:
+
+Contact changes are not being refreshed in the tree view.
+
+
+============ TODO:
 
 Profile
   - Profile Info
   - Contact Info
   - Large photograph
+
+Use less bandwidth (push instead of poll (use View concept)).
 
 Refactor: Move Contact to Sneer (facade). Make GUI truly only a skin.
 
