Progress towards using reactivity instead of polling.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@123 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer.ui/todo.txt
+++ b/sneer.ui/todo.txt
@@ -12,7 +12,7 @@ Profile
   - Contact Info
   - Large photograph
 
-Use less bandwidth (push instead of poll (use View concept)).
+Use less bandwidth (push instead of poll (use reactive paradigm)).
 
 Refactor: Move Contact to Sneer (facade). Make GUI truly only a skin.
 
