"select a contact" removed
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1043 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -5,7 +5,7 @@ Gandhi
  done - Remove the new profile JOptionPanes from the startup. Leave just the name JOptionPane.
  done - Remove Profile-related entries from the trayicon menu
   - Use app uid hexa representation instead of millis-nanos
-  - Remove the "Select a contact" message. Make "Me" the default selected party.
+ done - Remove the "Select a contact" message. Make "Me" the default selected party.
   - Make the profile field a large multi-line "memo" X^D field with scrollbars.
  done - Move SneerPort down to the last position.
  done - remove the Update button from the profile screen. Make the fields auto-update when they lose focus or when the user presses enter.
