--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -6,7 +6,7 @@ Gandhi
  done - Remove Profile-related entries from the trayicon menu
   - Use app uid hexa representation instead of millis-nanos
  done - Remove the "Select a contact" message. Make "Me" the default selected party.
-  - Make the profile field a large multi-line "memo" X^D field with scrollbars.
+ done - Make the profile field a large multi-line "memo" X^D field with scrollbars.
  done - Move SneerPort down to the last position.
  done - remove the Update button from the profile screen. Make the fields auto-update when they lose focus or when the user presses enter.
  done - Make the border of the field red when the field is edited (needs to be saved).
