--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,5 +1,7 @@
 Gandhi
-  - Fix MeToo to work from Sneer.jar
+ - Fix app unloading and channel unregister
+ - Try to open contactscreen *directly* at the correct size and position
+ done - Fix MeToo to work from Sneer.jar
   - Keep proportion of pic dimensions when it is resized.
  
 FileSharing
