Separate classloaders for each app.
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1086 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,6 +1,11 @@
 Gandhi
+ - Jockey gc classloader 
+ - SovereignApplicationInfo -> SovereignApplication
+ - Remove "src" structure from apps. Use root for source code directly.
+ - Eliminate apptmp directory leak.
+ - optimize channelimpl objectStream use
+
  - Fix app unloading and channel unregister
- - Try to open contactscreen *directly* at the correct size and position
  done - Fix MeToo to work from Sneer.jar
   - Keep proportion of pic dimensions when it is resized.
  
