--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,13 +1,15 @@
 Gandhi
- - Jockey gc classloader 
- - SovereignApplicationInfo -> SovereignApplication
- - Remove "src" structure from apps. Use root for source code directly.
- - Eliminate apptmp directory leak.
+ ->>> SovereignApplicationInfo -> SovereignApplication
+ ->>> Remove "src" structure from apps. Use root for source code directly
+ 
+ - Readable font for profile.
+ - Fix security problems FileTransfer
+ - app.metoo -> kernel.appmanager.metoo
+ - Eliminate app/tmp directory leak
+ - Create sneerapps project in svn. Move scribble and mp3sushi to there
  - optimize channelimpl objectStream use
-
- - Fix app unloading and channel unregister
- done - Fix MeToo to work from Sneer.jar
-  - Keep proportion of pic dimensions when it is resized.
+ - Refactor Metoo to use FileTransfer
+ 
  
 FileSharing
   - Hardcoded directory
