--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,7 +1,5 @@
 Gandhi
- ->>> SovereignApplicationInfo -> SovereignApplication
- ->>> Remove "src" structure from apps. Use root for source code directly
- 
+ >>>> online signal bug. illegalstate when reconnecting
  - Readable font for profile.
  - Fix security problems FileTransfer
  - app.metoo -> kernel.appmanager.metoo
@@ -9,6 +7,7 @@ Gandhi
  - Create sneerapps project in svn. Move scribble and mp3sushi to there
  - optimize channelimpl objectStream use
  - Refactor Metoo to use FileTransfer
+ - check if nullpointer in metoo freezes remote sneer
  
  
 FileSharing
