Build file name set to Sneer-build-candidate.jar
git-svn-id: https://sovereigncomputing.net/svn/sneer/trunk@1106 ee3b4d21-14f5-0310-a1fa-c5d8b2925ec4

--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -6,9 +6,13 @@ Gandhi
  - Create sneerapps project in svn. Move scribble and mp3sushi to there
  - optimize channelimpl objectStream use
  - Refactor Metoo to use FileTransfer
- - check if nullpointer in metoo freezes remote sneer
- 
- 
+
+
+Klaus
+ - Granular profile updating per signal
+ - Contact Navigation
+
+
 FileSharing
   - Hardcoded directory
   - Polling
