--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,8 +1,8 @@
 Gandhi
  - Talk to Humberto so he can make MP3 Sushi work again
- - Sneer.cleanupTemporaryDirectory()  //Refactor Move this to be together with where tmp directories are created.
- - Delete tmp directories and files immediately after they are used. You cannot leave a leak to be cleared when Sneer is "restarted" because Sneer runs forever. You still need to clean up "old" tmp directories as crash-recovery, not regular operation.
- - Make Sneer use Java's standard font again
+done - Sneer.cleanupTemporaryDirectory()  //Refactor Move this to be together with where tmp directories are created.
+done - Delete tmp directories and files immediately after they are used. You cannot leave a leak to be cleared when Sneer is "restarted" because Sneer runs forever. You still need to clean up "old" tmp directories as crash-recovery, not regular operation.
+done - Make Sneer use Java's standard font again
  - Fix security problems FileTransfer
 done - Eliminate app/tmp directory leak
  - Forget about this: Create sneerapps project in svn. Move scribble and mp3sushi to there [just delete this line]
@@ -10,7 +10,7 @@ done - optimize channelimpl objectStream use (note: when channel crashes, it hap
  - Refactor Metoo to use FileTransfer
 50% - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
  - Make MP3 Sushi work again if Humberto hasn't done so already
- - Make a font configuration screen: "Choose your font" with tips on how to make them work on the different OSs.
+done - Make a font configuration screen: "Choose your font" with tips on how to make them work on the different OSs.
 
 Klaus
  - Granular profile updating per signal
