--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,16 +1,17 @@
 Gandhi
- - Make contacts screen start with a good size
+done - Make contacts screen start with a good size
+done - Persist font
+done - Make a font configuration screen: "Choose your font" with tips on how to make them work on the different OSs.
+done - Make tree use chosen font
+50% - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
+ - make contacts screen a splitpane
  - Talk to Humberto so he can make MP3 Sushi work again
- - Persist font
  - Fix profile size
- - Make tree use chosen font
  - Fix security problems FileTransfer
  - Forget about this: Create sneerapps project in svn. Move scribble and mp3sushi to there [just delete this line]
  - optimize channelimpl objectStream use (note: when channel crashes, it happens on both sides?)
  - Refactor Metoo to use FileTransfer
-50% - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
  - Make MP3 Sushi work again if Humberto hasn't done so already
-done - Make a font configuration screen: "Choose your font" with tips on how to make them work on the different OSs.
 
 Klaus
  - Granular profile updating per signal
