--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,12 +1,9 @@
 Gandhi
-done - Make contacts screen start with a good size
-done - Persist font
-done - Make a font configuration screen: "Choose your font" with tips on how to make them work on the different OSs.
-done - Make tree use chosen font
-50% - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
+ - Remove all references to font from the User interface and implementing classes.  
  - make contacts screen a splitpane
  - Talk to Humberto so he can make MP3 Sushi work again
  - Fix profile size
+ - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
  - Fix security problems FileTransfer
  - Forget about this: Create sneerapps project in svn. Move scribble and mp3sushi to there [just delete this line]
  - optimize channelimpl objectStream use (note: when channel crashes, it happens on both sides?)
@@ -14,6 +11,7 @@ done - Make tree use chosen font
  - Make MP3 Sushi work again if Humberto hasn't done so already
 
 Klaus
+ - Delete DefaultSerializer, comment Optimized one. 
  - Granular profile updating per signal
  - Contact Navigation
 
