--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,7 +1,8 @@
 Gandhi
- - Fix "new user" PointOfView first update not happening
- - Talk to Humberto so he can make MP3 Sushi work again
- - Make MP3 Sushi work again if Humberto hasn't done so already
+done - Fix "new user" PointOfView first update not happening
+done - Talk to Humberto so he can make MP3 Sushi work again
+done - Make MP3 Sushi work again if Humberto hasn't done so already
+ - Check file transfer between LINUX and WINDOWS. (check if slash has some effect) (TransferQueue).
  - Persist SplitPane position (maybe with bounds)
  - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
  - optimize channelimpl objectStream use (note: when channel crashes, it happens on both sides?)
