--- a/sneer/todo.txt
+++ b/sneer/todo.txt
@@ -1,9 +1,9 @@
 Gandhi
 
- - Make build class for Sneer
- - Check file transfer between LINUX and WINDOWS. (check if slash has some effect) (TransferQueue).
- - My Public Files Folder - Any contact can do "Save As" on the other side.
- - Public Files of Contact - Copy and Paste
+done - Make build class for Sneer
+done - My Public Files Folder - Any contact can do "Save As" on the other side.
+partially done (windows&konqueror not nautilus) - Public Files of Contact - Copy and Paste
+ - Check file transfer between LINUX and WINDOWS. (Using Metoo, shared folders, public files).
  - Public Files of Contact - Drag and Drop
  - Persist SplitPane position (maybe with bounds)
  - Set up a gandhi.selfip.net so you are always reachable wherever you are. Tell the people on the sneercoders list.
